# face_and_eye_cmakelist

./: README.md
1_制作眼睛数据集/: CMakeLists.txt  make_face_eye.cpp
2_眼睛状态判断/EeyStatus_C++/: CMakeLists.txt
2_眼睛状态判断/EeyStatus_C++/classifer/: classifer.cpp  classifer.hpp
2_眼睛状态判断/EeyStatus_C++/include/: head.h
2_眼睛状态判断/EeyStatus_C++/ssd_detect/: ssd_detect.cpp
2_眼睛状态判断/EeyStatus_QT/FaceEye/: FaceEye.pro  classifer.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ssd_detect.cpp  ssd_detect.hpp
3_嵌套CMakelist写法/1_生成.so库/: CMakeLists.txt  main.cpp
3_嵌套CMakelist写法/1_生成.so库/classifer/: CMakeLists.txt  classifer.cpp  classifer.hpp
3_嵌套CMakelist写法/1_生成.so库/eye_status/: CMakeLists.txt  eyeStaus.cpp
3_嵌套CMakelist写法/1_生成.so库/ssd_detect/: CMakeLists.txt  ssd_detect.cpp  ssd_detect.hpp
3_嵌套CMakelist写法/2_只使用Final.so库/: CMakeLists.txt  main.cpp
3_嵌套CMakelist写法/2_只使用Final.so库/eye_status/: eyeStaus.h
